# agentgit

./: .gitignore  CLAUDE.md  COMMAND_TEST_LOG.txt  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_DESIGN.md  README.md  REAL_TEST_LOG.txt  SEMANTIC_RAG_DESIGN.md  cacheflow_guide.md  demo.py  pyproject.toml  real_test_commands.py  run_on_codebase.py  session_log.md  test_all_commands.py  tests.md
.cacheflow/: api_schema.json  config.json  server_info.json
agentgit/: __init__.py  agent.py  cli.py  compressor.py  config.py  dashboard.py  server.py  store.py
cacheflow/: __init__.py  agent.py  cli.py  compressor.py  config.py  dashboard.py  engine.py  gc.py  indexer.py  knowledge_prober.py  llama_server_custom.py  mcp_server.py  ollama.py  retriever.py  server.py  slot_pool.py  snapshot_query.py  store.py  tokenizer.py  tools.py
docs/: MCP_INTEGRATION.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DAGVisualization.tsx  DataTable.tsx  Header.tsx  MetricCard.tsx  Sidebar.tsx  dag-styles.css
frontend/src/styles/: app.css  data-table.css  design-system.css  header.css  metric-card.css  sidebar.css
scripts/: validate_llama_api.py
tests/: conftest.py  test_agent.py  test_agentic.py  test_cli.py  test_compressor.py  test_config.py  test_fixes.py  test_indexer.py  test_mcp_server.py  test_multi_agent.py  test_rag_integration.py  test_server_smoke.py  test_store.py  test_stress.py  test_system_questions.py  test_system_questions_enhanced.py
