[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cacheflow"
version = "0.1.0"
description = "Persistent KV cache memory for AI agents with intelligent snapshotting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click >= 8.0",
    "httpx >= 0.27",
    "sqlalchemy >= 2.0",
    "rich >= 13.0",
    "pydantic >= 2.0",
    "llama-cpp-python >= 0.2.0",
    "flask >= 2.3",
    "sentence-transformers >= 2.2",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-asyncio >= 0.21",
]

[project.scripts]
cf = "cacheflow.cli:cli"
